# ironcore

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: README.md  example.yaml
configs/data/: base.yaml  dpo_example.yaml  full_owt_pretrain.yaml  multi_sft_example.yaml  pretrain_example.yaml  sft_example.yaml  validation_pretrain.yaml
configs/model/: gpt2-large.yaml  gpt2-medium.yaml  gpt2-small-fp32.yaml  gpt2-small.yaml  gpt2-xl.yaml  gpt2.yaml  gpt3.yaml  llama.yaml
data/: README.md
docs/: multi_dataset_sft.md  plan.md
docs/reports/: attention_benchmarks.md  distributed_training.md  hf_checkpointing.md  torch_compile.md
examples/: evaluation.py  generate_text.py  train.py
ironcore/: __init__.py  __main__.py  controller.py  global_vars.py  language_model.py  logger.py  trainer.py  training_utils.py  utils.py
ironcore/checkpointing/: __init__.py  hf_interop.py  native.py  weight_mapping.py
ironcore/cli/: __init__.py  inspect.py  preprocess.py  train.py
ironcore/config/: __init__.py  config.py  config_data.py  config_model.py  config_optim.py  config_parallel.py  config_trainer.py  config_utils.py
ironcore/dataloader/: __init__.py  collator.py  (+2 more)
tests/: benchmark_attention_comprehensive.py  benchmark_attention_corrected.py  benchmark_tp1_tp2.py  check_tp_memory.py  compare_tp1_tp2.py  compare_tp1_tp2_simple.py  test_attention.py  test_attention_tp_simple.py  test_attention_tp_validation.py  test_eval.py  test_hf_interop.py  test_tp2_dataloader.py  test_tp_proper.py  test_tp_weight_sharding.py
(+38 files in other folders)
